examples/pass/closures/simple_fn.dew
// expect: 2026
def add = fn(x: Int, y: Int) -> Int { x + y };
def main = fn { add(2000, 26) -> stdout; };
